test/bad/generics/type04.px

func f<Num A, Num B>(A x, B y) def
    print x - y
